Photos Panel content and first render of the images fetched from pixabay

--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
         "@kobalte/core": "^0.13.9",
         "@solidjs/router": "^0.15.3",
         "@tailwindcss/vite": "^4.0.8",
+        "@types/lodash": "^4.17.16",
+        "axios": "^1.8.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "interactjs": "^1.10.27",
+        "lodash": "^4.17.21",
         "lucide-solid": "^0.482.0",
         "solid-js": "^1.9.3",
         "tailwind-merge": "^2.5.3",
