--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@solidjs/testing-library": "^0.8.10",
         "@testing-library/jest-dom": "^6.6.3",
         "@types/node": "^22.13.5",
+        "@types/webfontloader": "^1.6.38",
         "autoprefixer": "^10.4.20",
         "jsdom": "^25.0.1",
         "prettier": "^3.3.3",
@@ -31,6 +32,7 @@
         "@kobalte/core": "^0.13.9",
         "@solidjs/router": "^0.15.3",
         "@tailwindcss/vite": "^4.0.8",
+        "@tanstack/solid-virtual": "^3.13.6",
         "@types/lodash": "^4.17.16",
         "axios": "^1.8.4",
         "class-variance-authority": "^0.7.1",
@@ -41,6 +43,7 @@
         "solid-js": "^1.9.3",
         "tailwind-merge": "^2.5.3",
         "tailwindcss-animate": "^1.0.7",
+        "webfontloader": "^1.6.28",
         "zustand": "^5.0.3"
     }
 }
